# Signals-Pamphile

./: .gitignore  DFT.py  FourierMagnitude.py  Laplace-Transform.py  RC.py  README.md  Z-Transform.py  ZeroToNullB.py  edit.txt  pyproject.toml  requirements.txt
Answers/: Q2.ipynb  Q4.ipynb  Q5.py
Examples/: FourierMagnitude.py  Laplace-Transform.py  README.md  Z-Transform.py
FISA/: ConvolutionCT.ipynb  LTI.ipynb  RL.ipynb  Shekhinah2.ipynb  TrasnferFunction.ipynb
JupyterNotebook/: ConvolutionCT.ipynb  LTI.ipynb  Laplace_Transform.ipynb  Q1.ipynb  Question5.ipynb  RL.ipynb  RectangularWave.ipynb  Shekhinah.ipynb  Switchedcosine copy.ipynb  Switchedcosine.ipynb
Maso Test 2/: Q1.ipynb  Q3.ipynb  Q4.ipynb
Pioneer Tests/Test 1/: Q1.ipynb  Q3.ipynb  Q4.ipynb  Q8.ipynb
Pioneer Tests/Test 2/: Q1.ipynb
Test 1/: Main.java  Q3.ipynb  Q5.ipynb  Q6.ipynb  Q8.ipynb
Test 1 A/: Q1.ipynb  Q2.ipynb  Q3.ipynb  Q4.ipynb  Q5.ipynb  Q6.ipynb  Q6.py  Q7.ipynb  Q9.ipynb
Test 1 A/.ipynb_checkpoints/: Q1-checkpoint.ipynb  Q2-checkpoint.ipynb  Q3-checkpoint.ipynb  Q4-checkpoint.ipynb  Q5-checkpoint.ipynb  Q6-checkpoint.ipynb  Q7-checkpoint.ipynb  Q9-checkpoint.ipynb
Test 1 B/: Q2.ipynb  Q3.ipynb  Q4.ipynb  Q5.ipynb
Test 1 B/.ipynb_checkpoints/: Q2-checkpoint.ipynb  Q3-checkpoint.ipynb  Q4-checkpoint.ipynb  (+3 more)
Test 1 C/: Q1.ipynb  Q2.ipynb  Q4.ipynb  Q5.ipynb  Q6.ipynb  Q7.ipynb  Q8.ipynb  Q9.ipynb
Test 2/: Q3.ipynb  Q5.ipynb  Q5.py
Test 2 A/: Q1.ipynb  Q2.ipynb  Q3.ipynb  Q4.ipynb  Q5.ipynb
Test 2 B/: Q1.ipynb  Q3.py  Q5.ipynb  Q5.py
Test 2 C/: Q2.ipynb
