[project]
name = "signals-pamphile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "simpy>=4.1.2",
    "sympy>=1.14.0",
]
